# Vestigium

./: .gitconfig  .gitignore  Language.xlsx  Monsters.ipynb  ObsidiantoWorldAnvil.ipynb  README.md  Velum_Cineris;everyday_guideto_concord_city.json  Velum_Cineris;guide_to_orimond.json  compendium.ipynb  compendium_fantasy.ipynb  compendium_modern.ipynb  extract.ipynb  markdown.ipynb  package-lock.json  package.json  print.ipynb  pyproject.toml  ruff.toml  sample.ipynb  spells_compendium.json
_generated/: index-source.json  index-sources.json
data/: Vestigium_Spells.xlsx  spell.json  style.css
data/Monsters/: AI Hologram.json  Ad-specter.json  Air Rods.json  Annelids.json  Architectural Shifter.json  Asphalt Crawler.json  Automated Interrogator.json  Babushka Lady.json  Ball Lightning.json  Beast of Gévaudan.json  Beast of Soir-sans-fin.json  Bird of Omen.json  Black Stick Man.json  (+135 more)
extracted/: expanded_conditions.xlsx
markdown/: **The Oak and the Rending Wind**.txt  Ashen Vault - Avian Migrations.txt  Ashen Vault - Blood Pact.txt  Ashen Vault - Calendar.txt  Ashen Vault - Class Barbarian.txt  Ashen Vault - Class Bard.txt  Ashen Vault - Class Cleric.txt  Ashen Vault - Class Druid.txt  Ashen Vault - Class Fighter.txt  Ashen Vault - Class Monk.txt  Ashen Vault - Class Paladin.txt  Ashen Vault - Class Ranger.txt  Ashen Vault - Class Rogue.txt  Ashen Vault - Class Sorcerer.txt  Ashen Vault - Class Warlock.txt  Ashen Vault - Class Wizard.txt  Ashen Vault - Cosmology.txt  Ashen Vault - Critical & Fumbles.txt  Ashen Vault - Darkvision Reimagined.txt  Ashen Vault - Denizen of the Spiral.txt  Ashen Vault - Denizen of the Veil.txt  Ashen Vault - Denizen of the Verdant Cradle.txt  Ashen Vault - Drakendepth.txt  Ashen Vault - Dynamic Sneak Attacks.txt  Ashen Vault - Equipment.txt  Ashen Vault - Expanded Conditions.txt  Ashen Vault - Expanded Languages.txt  Ashen Vault - Firearms.txt  Ashen Vault - Geography and Politics.txt  Ashen Vault - Injury System.txt  Ashen Vault - Species:  Luminari.txt  Ashen Vault - Species: Aestari.txt  Ashen Vault - Species: Androids.txt  Ashen Vault - Species: Aquilani.txt  Ashen Vault - Species: Arochi.txt  Ashen Vault - Species: Azurini.txt  Ashen Vault - Species: Canid.txt  Ashen Vault - Species: Cindralis.txt  Ashen Vault - Species: Corvani.txt  Ashen Vault - Species: Custodians.txt  (+62 more)
scripts/: Debug_Spell_List.py  Fixed_Sort_Spells_v3.py  New_Sort_Spells.py  Placehold_monsters_images.py  Sort_Spells.py  convert-mdx.js  download_wordnet.py  extract_magic_items.py  extract_spells.py  generate_spell_list.py  generate_spells.py  minify.js  tokenize.py  tokenizer.py
src/: fantasy_sources.py  google_doc_updater.py  image_generator.py  sources.py
translator/: batch_generate_lexemes.py  batch_generate_phonetics.py  batch_generate_scripts.py  engine.py  generator.py  gsheets_client.py  lexicon.py  load_dictionary.py  main.py  profiles.py  script_generator.py  test_ollama.py
(+51 files in other folders)
