[project]
name = "vestigium_foundry_spells"
version = "0.1.0"
description = ""
authors = [
    {name = "Rocko",email = "vbernier@nexapp.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "image (>=1.5.33,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
